--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,24 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68"
 # arc-swap = "1.5.1"
-audiotags = "0.4.1"
+audiotags = "0.5.0"
 # chrono = "0.4.23"
-crossterm = "0.26.0"
+crossterm = "0.27.0"
 dirs = "5.0.0"
-enum-iterator = "1.3.0"
+enum-iterator = "2.1.0"
 # itertools = "0.10.5"
 jwalk = "0.8.1"
-rodio = { version = "0.17.1" }
+# rodio = { version = "0.19.0" }
+awedio = '0.4.0'
 # simplemad = "0.9.0"
-# static_init = "1.0.3"
+static_init = "1.0.3"
 tracing = "0.1.37"
 # tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
 tui = { version = "0.19", features = ['crossterm'], default-features = false }
+rayon = "1.10.0"
+# itertools = "0.13.0"
+unicode-width = "0.1.13"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
