--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,14 @@ name = "music_player"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+codegen-units = 1
+lto = true
+
 [dependencies]
-anyhow = "1.0.68"
+color-eyre = "0.6.3"
 # arc-swap = "1.5.1"
-audiotags = "0.5.0"
+lofty = "0.21.1"
 # chrono = "0.4.23"
 crossterm = "0.27.0"
 dirs = "5.0.0"
@@ -22,8 +26,9 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 tui = { version = "0.19", features = ['crossterm'], default-features = false }
 rayon = "1.10.0"
-# itertools = "0.13.0"
+#itertools = "0.13.0"
 unicode-width = "0.1.13"
+mimalloc = "0.1"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
