--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,30 +8,26 @@ opt-level = 1
 lto = "thin"
 
 [profile.release]
+opt-level = 2
 codegen-units = 1
 lto = true
 
 [dependencies]
 color-eyre = "0.6.3"
-# arc-swap = "1.5.1"
-lofty = "0.21.1"
-# chrono = "0.4.23"
+lofty = "0.22.1" # metadata parser
 crossterm = "0.28.1"
-dirs = "5.0.0"
-enum-iterator = "2.1.0"
-# itertools = "0.10.5"
-jwalk = "0.8.1"
-# rodio = { version = "0.19.0" }
-awedio = '0.4.0'
-# simplemad = "0.9.0"
+dirs = "6.0.0"
+awedio = '0.4.0' # audio playback
 static_init = "1.0.3"
 tracing = "0.1.37"
-# tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
 rayon = "1.10.0"
-#itertools = "0.13.0"
-unicode-width = "0.1.13"
+unicode-width = "0.2.0"
 mimalloc = "0.1"
+arrayvec = "0.7.6"
+strum = "0.26"
+strum_macros = "0.26"
+crossbeam-channel = "0.5.14"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
