--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ static_init = "1.0.3"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 rayon = "1.10.0"
-unicode-width = "0.2.0"
+unicode-width = {version = "0.2.0", default-features = false}
 mimalloc = "0.1"
 arrayvec = "0.7.6"
 strum = "0.26"
