--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ lto = true
 color-eyre = "0.6.3"
 lofty = "0.22.1" # metadata parser
 crossterm = "0.28.1"
-dirs = "6.0.0"
 awedio = '0.4.0' # audio playback
 static_init = "1.0.3"
 tracing = "0.1.37"
@@ -28,6 +27,9 @@ arrayvec = "0.7.6"
 strum = "0.26"
 strum_macros = "0.26"
 crossbeam-channel = "0.5.14"
+directories = "6.0.0"
+toml = "0.8.20"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
