--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,47 +1,18 @@
 # https://github.com/rust-lang/rustfmt/blob/master/Configurations.md
-max_width = 100
+disable_all_formatting = false
+fn_params_layout = "Tall"
+force_explicit_abi = true
 hard_tabs = false
-tab_spaces = 4
+match_arm_leading_pipes = "Never"
+match_block_trailing_comma = true
+max_width = 120
+merge_derives = false
 newline_style = "Unix"
-use_small_heuristics = "Default"
-fn_call_width = 60
-attr_fn_like_width = 70
-struct_lit_width = 18
-struct_variant_width = 35
-array_width = 60
-chain_width = 60
-single_line_if_else_max_width = 50
+remove_nested_parens = true
 reorder_imports = true
 reorder_modules = true
-binop_separator = "Front"
-remove_nested_parens = true
-combine_control_expr = true
-short_array_element_width_threshold = 10
-overflow_delimited_expr = false
-struct_field_align_threshold = 0
-enum_discrim_align_threshold = 0
-match_arm_blocks = true
-match_arm_leading_pipes = "Never"
-force_multiline_blocks = false
-fn_args_layout = "Tall"
-brace_style = "SameLineWhere"
-control_brace_style = "AlwaysSameLine"
-trailing_semicolon = true
-trailing_comma = "Vertical"
-match_block_trailing_comma = true
-blank_lines_upper_bound = 1
-blank_lines_lower_bound = 0
-inline_attribute_width = 0
-format_generated_files = true
-merge_derives = true
-use_try_shorthand = false
+short_array_element_width_threshold = 0
+tab_spaces = 4
 use_field_init_shorthand = false
-force_explicit_abi = true
-condense_wildcard_suffixes = false
-unstable_features = false
-disable_all_formatting = false
-skip_children = false
-hide_parse_errors = false
-error_on_line_overflow = false
-error_on_unformatted = false
-ignore = []
+use_small_heuristics = "Max"
+use_try_shorthand = false
