--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ crossterm = "0.28.1"
 awedio = '0.4.0' # audio playback
 static_init = "1.0.3"
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
 rayon = "1.10.0"
 unicode-width = {version = "0.2.0", default-features = false}
 mimalloc = "0.1"
