improve thread panic loging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ lto = true
 
 [dependencies]
 color-eyre = "0.6.3"
+color-backtrace = "0.7.0"
+backtrace = "0.3.48"
 lofty = "0.22.1" # metadata parser
 crossterm = "0.28.1"
 awedio = '0.4.0' # audio playback
